--- a/.github/workflows/gitactions.yml
+++ b/.github/workflows/gitactions.yml
@@ -17,5 +17,5 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./public/ s3://BUCKET_NAME --delete
+      run: aws s3 sync . s3://www.andersondmelo.com.br --delete
       
